# coulomb-solver

./: .gitignore  README.md
include/: coulombSolver.hpp  csv.hpp  float_t.hpp  mathHelpers.hpp
src/: CMakeLists.txt  coulombSolver.cpp  csv.cpp  main.cpp  mathHelpers.cpp
